# BadCaseSelect

./: .gitignore  README.md  pyproject.toml
configs/: example.json  example.jsonc
docs/: model_adapter.md  offline_deployment.md
docs/superpowers/plans/: 2026-07-18-vfi-hard-case-mining-implementation.md
docs/superpowers/specs/: 2026-07-18-vfi-hard-case-mining-design.md
scripts/: download_aarch64_wheels.py  prepare_offline_bundle.py  probe_ascend.py  record_offline_resource.py
src/vfi_hard_miner/: __init__.py  cli.py  config.py  diagnosis.py  diagnostics.py  finalize.py  gates.py  image_io.py  indexing.py  manifest.py  materialization.py  mock_model.py  model_adapter.py  offline.py  outputs.py  pipeline.py  reconstruction.py  runtime.py  schemas.py  scoring.py  segments.py  state.py  visualization.py  worker.py
src/vfi_hard_miner/models/: __init__.py  _base.py  _template.py  unet.py
tests/: test_cli.py  test_config.py  test_cuda_smoke.py  test_diagnosis.py  test_diagnostics.py  test_finalize.py  test_gates.py  test_image_io.py  test_indexing.py  test_manifest.py  test_mock_model.py  test_model_adapter.py  test_offline.py  test_outputs.py  test_pipeline_index.py  test_pipeline_main.py  test_pipeline_teacher.py  test_reconstruction.py  test_scoring.py  test_segments.py  test_state.py  test_visualization.py  test_worker.py
